2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reduce the complexity of the test suite.

	* benchmarks/ca/lidka.d768800: Do not use for checking, only for
	benchmarking.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the benchmarks.

	* benchmarks/lib/benchmark.h,
	* benchmarks/lib/benchmark.c,
	* benchmarks/blas/blasbench.h,
	* benchmarks/ca/benchca.c,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/livermore/ll-generate.py,
	* benchmarks/mandel/mandel.c,
	* benchmarks/smooth/smooth.c: Use regular C functions and function
	pointers for the various benchmark functions.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Clean up the benchmark framework.

	* benchmarks/lib/benchmark.c: Avoid using the names `putc' and
	`puts' which have a specific meaning in the C library.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make the `smooth' benchmark compatible with the `spp' targets.

	* benchmarks/smooth/smooth.c: Do not nest `sl_create' if the
	current dialect is `spp'.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes.

	* benchmarks/blas/gendata.sh,
	* benchmarks/livermore/ll-generate.py: Avoid generating data files
	in subdirectories.

	* benchmarks/blas/bench-dasum.inputs,
	* benchmarks/blas/bench-daxpy.inputs,
	* benchmarks/blas/bench-dcopy.inputs,
	* benchmarks/blas/bench-ddot.inputs,
	* benchmarks/blas/bench-dnrm2.inputs,
	* benchmarks/blas/bench-drot.inputs,
	* benchmarks/blas/bench-dscal.inputs,
	* benchmarks/blas/bench-dswap.inputs,
	* benchmarks/blas/bench-idamax.inputs,
	* benchmarks/blas/bench-isamax.inputs,
	* benchmarks/blas/bench-sasum.inputs,
	* benchmarks/blas/bench-saxpy.inputs,
	* benchmarks/blas/bench-scopy.inputs,
	* benchmarks/blas/bench-sdot.inputs,
	* benchmarks/blas/bench-snrm2.inputs,
	* benchmarks/blas/bench-srot.inputs,
	* benchmarks/blas/bench-sscal.inputs,
	* benchmarks/blas/bench-sswap.inputs: Update accordingly.

2012-06-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>
